# crawler

crawl_dashboard/: .env  Cargo.toml
crawl_dashboard/migrations/2023-03-16-131901_crawl_result/: down.sql  up.sql
crawl_dashboard/migrations/2023-03-24-153116_add_unique_to_users_name_and_entries_terms/: down.sql  up.sql
crawl_dashboard/src/: main.rs
crawl_dashboard/src/api/: crawls.rs  entries.rs  mod.rs  task.rs  users.rs
crawl_dashboard/src/db/: models.rs  schema.rs
crawl_dashboard/src/errors/: api_error.rs
crawl_dashboard/src/repository/: entry_repository.rs  mod.rs  user_repository.rs
crawl_drivers/: Cargo.toml
crawl_drivers/src/: lib.rs
crawl_frontend/: Cargo.toml  index.html
crawl_frontend/src/: main.rs
crawler/: Cargo.toml
crawler/src/: lib.rs
