[package]
name = "crawl_dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.crawler]
path = "../crawler"

[dependencies.crawl_drivers]
path = "../crawl_drivers"

[dependencies]
diesel = { version = "2.0.0", features = ["postgres", "chrono"]}
dotenvy = "0.15"
actix-web = "^4"
uuid = { version = "^0.8", features = ["v4"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "1.0.92"
env_logger = "0.8"
log = "^0.4"
strum_macros = "^0.24"
strum = { version = "^0.24", features = ["derive"] }
derive_more = "^0.99"
actix-cors = "0.6.4"
chrono = { version = "0.4.23", features = ["serde"] }
